# spotlighter

./: .gitignore  pyproject.toml
src/: local_infer.py  main.py  test_azure_openai.py
src/pipeline/: pipeline.py
src/text_ingestor/: local_ingestor.py
src/topic_extractor/: topic_extractor.py
